# Latte

./: Latte.cabal  Makefile  README.md  run_tests.sh
app/: Main.hs
src/: Lib.hs
src/Grammar/: Abs.hs  ErrM.hs  Latte.cf  Lex.hs  Par.hs  Print.hs
src/Latte/Analysis/: Data.hs  Exceptions.hs  Reachability.hs  ReturnAnalysis.hs  Rewrite.hs  StaticAnalysis.hs  Typing.hs
src/Latte/Grammar/: Abs.hs  ErrM.hs  Latte.cf  Lex.hs  Par.hs  Print.hs
src/Latte/Grammar/Latte/: Doc.txt  Lex.x  Par.info  Par.y
