cabal-version:      2.4
name:               Latte
version:            0.1.0.0


-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Franciszek Hnatów
maintainer:         franciszek.hnatow@gmail.com

library
    exposed-modules:
        Latte.Analysis.StaticAnalysis
        Latte.Grammar.ErrM
        Latte.Grammar.Lex
        Latte.Grammar.Par

    -- Modules included in this library but not exported.
    other-modules:
        Latte.Analysis.Data
        Latte.Analysis.Exceptions
        Latte.Analysis.ReturnAnalysis
        Latte.Analysis.Rewrite
        Latte.Analysis.Typing
        Latte.Grammar.Abs
        Latte.Grammar.Print
       
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
      

    build-depends:
        base ^>=4.15.1.0,
        array ^>=0.5.4.0,
        mtl ^>=2.2.2,
        containers ^>=0.6.4.1,
        text ^>=1.2.5.0

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall

executable latc_llvm
    main-is:       Main.hs 

    -- other-modules:
        

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        Latte,
        base ^>=4.15.1.0,
        text ^>=1.2.5.0,
        filepath ^>=1.4.2.1,
        directory ^>=1.3.6.2,
        process ^>=1.6.13.2

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -Wall

